--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.example.sumtwitter.main.list.ListFragment"
+        android:name="com.example.sumtwitter.main.timeline.TimelineFragment"
         android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        tools:layout="@layout/fragment_timeline" >
         <action
             android:id="@+id/action_listFragment_to_mapFragment"
             app:destination="@id/mapFragment" />
