--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -9,7 +9,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:progressTint="@android:color/holo_blue_light"
+        android:progressTint="@color/colorPrimaryDark"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"/>
