--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/listFragment"
-        android:title="@string/list_label"
-        android:icon="@drawable/ic_list"/>
+        android:title="@string/timeline_label"
+        android:icon="@drawable/ic_timeline"/>
 
     <item
         android:id="@+id/mapFragment"
-        android:title="@string/map_label"
-        android:icon="@drawable/ic_map"/>
+        android:title="@string/profile_label"
+        android:icon="@drawable/ic_profile"/>
 </menu>
